# pgfmt

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yaml  docs.yaml  publish.yaml  release.yaml  testing.yaml
ci/: test
docs/: api.md  cli.md  index.md  styles.md
guides/: aweber.md  mattmc3.md  sqlfmt.html
src/: main.rs
src/pgfmt/: __init__.py  aweber.py  cli.py  dbt.py  formatter.py  gitlab.py  kickstarter.py  mattmc3.py  mozilla.py  river.py
tests/: test_aweber.py  test_dbt.py  test_gitlab.py  test_kickstarter.py  test_mattmc3.py  test_mozilla.py  test_river.py
tests/fixtures/aweber/: select_case_join.expected  select_case_join.sql  select_cte_nested.expected  select_cte_nested.sql  select_cte_union.expected  select_cte_union.sql  select_join.sql  select_left_join.expected  select_left_join.sql  select_or.expected  select_or.sql  select_simple.expected  select_subquery.expected  select_subquery.sql
tests/fixtures/dbt/: select_cte.expected  select_cte.sql  select_group_order.expected  select_group_order.sql  select_join.expected  select_simple.expected
tests/fixtures/gitlab/: select_cte.expected  select_cte.sql  select_group_order.expected  select_join.expected  select_join.sql  select_simple.expected  select_simple.sql
tests/fixtures/kickstarter/: select_cte.expected  select_cte.sql  select_join.expected  select_join.sql  select_simple.expected  select_simple.sql  select_where.expected  select_where.sql
tests/fixtures/mattmc3/: insert_values.expected  insert_values.sql  select_join.expected  select_or.expected  select_simple.expected  select_simple.sql  update_multi.expected  update_multi.sql
tests/fixtures/mozilla/: create_table.expected  delete_and.expected  delete_and.sql  insert_multi.expected  insert_multi.sql  select_cte.expected  select_group_order.expected  select_join.expected  select_join.sql  select_simple.expected  select_single_col.expected  select_single_col.sql  select_subquery.expected  select_union.expected  select_using_join.expected  select_using_join.sql  update_multi.expected  update_multi.sql
tests/fixtures/river/: create_domain.expected  create_domain.sql  create_foreign_table.expected  create_foreign_table.sql  create_function.expected  create_function.sql  create_matview.expected  create_matview.sql  create_table.expected  create_table.sql  create_table_with.expected  create_table_with.sql  create_view_cte.expected  create_view_cte.sql  delete_simple.expected  delete_simple.sql  insert_values.expected  insert_values.sql  select_agg_functions.sql  select_alias.expected  select_alias.sql  select_and.expected  select_and.sql  select_case.expected  select_case.sql  select_cte.expected  select_distinct.expected  select_distinct.sql  select_group_by.expected  select_group_by.sql  select_having.expected  select_having.sql  select_join.expected  select_order_limit.expected  select_order_limit.sql  select_simple.sql  select_subquery_exists.expected  select_subquery_exists.sql  select_subquery_in.expected  select_subquery_in.sql  (+7 more)
