[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgfmt"
description = "A PostgreSQL SQL formatter"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
version = "0.1.0"
authors = [{ name = "Gavin M. Roy", email = "gavinmroy@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Software Development",
]
dependencies = [
    "pgparse",
]

[project.scripts]
pgfmt = "pgfmt.cli:main"

[project.urls]
Homepage = "https://github.com/gmr/pgfmt"
Documentation = "https://gmr.github.io/pgfmt/"

[dependency-groups]
dev = [
    "build",
    "coverage[toml]",
    "pre-commit",
    "pytest",
    "ruff",
]
docs = [
    "mkdocs>=1.5,<2",
    "mkdocs-material>9.5,<10",
    "mkdocstrings[python]>=0.26,<1",
]

[tool.hatch.build.targets.wheel]
include = ["src/pgfmt"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pgfmt"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.ruff]
line-length = 79
target-version = "py311"
exclude = []
src = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "I",        # isort
    "N",        # pep8-naming
    "Q",        # flake8-quotes
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "DTZ",      # flake8-datetimez
    "FURB",     # refurb
    "RUF",      # ruff-specific
    "T20",      # flake8-print
    "UP",       # pyupgrade
]
ignore = [
    "RSE",      # contradicts Python Style Guide
    "S311",     # Not doing cryptography
]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"src/pgfmt/formatter.py" = ["C901"]
"src/pgfmt/mozilla.py" = ["C901", "S608"]
"src/pgfmt/river.py" = ["C901"]
"tests/**/*.py" = ["S"]

[tool.ruff.lint.isort]
known-first-party = ["pgfmt"]
